--- a/package.json
+++ b/package.json
@@ -11,15 +11,13 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
-        "formik": "^2.2.6",
         "node-sass": "^5.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "typescript": "^4.1.2",
-        "web-vitals": "^1.0.1",
-        "yup": "^0.32.9"
+        "web-vitals": "^1.0.1"
     },
     "scripts": {
         "start": "craco start",
