--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "devDependencies": {
         "@tailwindcss/postcss7-compat": "^2.1.0",
         "@types/react-router-dom": "^5.1.7",
+        "@types/redux-logger": "^3.0.8",
         "autoprefixer": "^9.8.6",
         "postcss": "^7.0.35",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
