--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "firebase": "^8.3.3",
+        "lodash.memoize": "^4.1.2",
         "node-sass": "^5.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -51,6 +52,7 @@
     },
     "devDependencies": {
         "@tailwindcss/postcss7-compat": "^2.1.0",
+        "@types/lodash.memoize": "^4.1.6",
         "@types/react-router-dom": "^5.1.7",
         "@types/redux-logger": "^3.0.8",
         "autoprefixer": "^9.8.6",
