--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
         "reselect": "^4.0.0",
+        "styled-components": "^5.3.0",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
@@ -56,6 +57,7 @@
         "@types/lodash.memoize": "^4.1.6",
         "@types/react-router-dom": "^5.1.7",
         "@types/redux-logger": "^3.0.8",
+        "@types/styled-components": "^5.1.9",
         "autoprefixer": "^9.8.6",
         "postcss": "^7.0.35",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
