--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
+        "redux-saga": "^1.1.3",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
         "styled-components": "^5.3.0",
@@ -58,6 +59,7 @@
         "@types/lodash.memoize": "^4.1.6",
         "@types/react-router-dom": "^5.1.7",
         "@types/redux-logger": "^3.0.8",
+        "@types/redux-saga": "^0.10.5",
         "@types/styled-components": "^5.1.9",
         "autoprefixer": "^9.8.6",
         "postcss": "^7.0.35",
