--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "axios": "^0.21.1",
         "firebase": "^8.3.3",
         "lodash.memoize": "^4.1.2",
         "node-sass": "^5.0.0",
