--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "proxy": "http://localhost:5000",
     "scripts": {
-        "client": "cd .. && cd client && npm start",
+        "client": "cd client && npm start",
         "server": "nodemon server.js",
         "build": "cd client && npm run build",
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
